--- a/src/app/titre-page/titre-page.component.html
+++ b/src/app/titre-page/titre-page.component.html
@@ -1,4 +1,4 @@
-<div class="row text-center">
+<div id="section_titre" class="row text-center">
   <div class="col-md-4"></div>
   <div class="col-md-4">
     <h2 id="titre_page">{{ titrePage }}</h2>
