--- a/src/app/page-ajouter-portfolio/page-ajouter-portfolio.component.html
+++ b/src/app/page-ajouter-portfolio/page-ajouter-portfolio.component.html
@@ -1,4 +1,4 @@
 <app-en-tete></app-en-tete>
 <app-navigation></app-navigation>
-<app-titre-page titrePage="Tableau de bord"></app-titre-page>
+<app-titre-page titrePage="Ajouter un portfolio"></app-titre-page>
 <app-pied-page></app-pied-page>
