Nouvelle tentative sur Heroku

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,7 +17,8 @@
             <a class="nav-link" href="/ajouter-portfolio">Ajouter un portfolio</a>
           </li>
         </ul>
-        <button (click)="seDeconnectez()" class="btn btn-danger my-2 my-sm-0" type="submit">Se déconnectez</button>
+        <a href="/profil" class="btn btn-primary my-2 my-sm-0" type="submit">Se déconnectez</a>
+        <a (click)="seDeconnectez()" class="btn btn-danger my-2 my-sm-0" type="submit">Se déconnectez</a>
       </div>
     </nav>
   </div>
