Ajout de la base stock

--- a/src/app/page-accueil/page-accueil.component.html
+++ b/src/app/page-accueil/page-accueil.component.html
@@ -1,4 +1,5 @@
 <app-en-tete></app-en-tete>
 <app-navigation></app-navigation>
 <app-titre-page titrePage="Tableau de bord"></app-titre-page>
+<app-liste-action></app-liste-action>
 <app-pied-page></app-pied-page>
