--- a/src/app/page-ajouter-action/page-ajouter-action.component.html
+++ b/src/app/page-ajouter-action/page-ajouter-action.component.html
@@ -1,4 +1,5 @@
 <app-en-tete></app-en-tete>
 <app-navigation></app-navigation>
 <app-titre-page titrePage="Ajouter une action"></app-titre-page>
+<app-form-stock></app-form-stock>
 <app-pied-page></app-pied-page>
