--- a/src/app/form-connexion/form-connexion.component.html
+++ b/src/app/form-connexion/form-connexion.component.html
@@ -31,7 +31,7 @@
           Le mot de passe est requis.
         </div>
       </div>
-      <button type="submit" class="btn btn-primary">Se connecter</button>
+      <button type="submit" [disabled]="!utilisateurFormConnexion.form.valid" class="btn btn-primary">Se connecter</button>
     </form>
     <hr />
     <a href="/inscription" class="btn btn-primary">M'inscrire</a>
