--- a/src/app/pied-page/pied-page.component.html
+++ b/src/app/pied-page/pied-page.component.html
@@ -1,5 +1,5 @@
 <div class="row text-center">
   <div class="col-md-12">
-    <p id="texte_copyright">GreenStock © {{ date | date:'yyyy' }} - Tous droits réservés.</p>
+    <p id="texte_copyright">GreenStock © 2021 - Tous droits réservés.</p>
   </div>
 </div>
